# automaat

./: .dockerignore  .gitignore  .travis.yml  Cargo.toml  Dockerfile  Makefile.toml  README.md  clippy.toml  release.toml
docs/: CONTRIBUTING.md  RELEASING.md  gitmessage.txt
src/core/: Cargo.toml  README.md
src/core/src/: lib.rs
src/processors/git-clone/: Cargo.toml  README.md
src/processors/git-clone/src/: lib.rs
src/processors/http-request/: Cargo.toml  README.md
src/processors/http-request/src/: headers.rs  lib.rs
src/processors/json-edit/: Cargo.toml  README.md
src/processors/json-edit/src/: lib.rs
src/processors/print-output/: Cargo.toml  README.md
src/processors/print-output/src/: lib.rs
src/processors/redis-command/: Cargo.toml
src/processors/redis-command/src/: lib.rs
src/processors/shell-command/: Cargo.toml  README.md
src/processors/shell-command/src/: lib.rs
src/processors/sql-query/: Cargo.toml  README.md
src/processors/sql-query/src/: lib.rs  types.rs
src/processors/string-regex/: Cargo.toml  README.md
src/processors/string-regex/src/: lib.rs
src/server/: Cargo.toml  README.md  schema.graphql
src/server/migrations/2019-05-07-162759_create_pipelines_table/: down.sql  up.sql
src/server/migrations/2019-05-07-162809_create_steps_table/: down.sql  up.sql
src/server/migrations/2019-05-09-135514_create_variables_table/: down.sql  up.sql
src/server/migrations/2019-05-09-141151_create_tasks_table/: down.sql  up.sql
src/server/migrations/2019-05-09-141606_create_task_steps_table/: down.sql  up.sql
src/server/migrations/2019-06-24-120901_add_selection_constraint_to_variables_table/: down.sql  up.sql
src/server/migrations/2019-06-25-142939_add_default_value_to_variables_table/: down.sql  up.sql
src/server/migrations/2019-07-08-193817_add_example_value_to_variables_table/: down.sql  up.sql
src/server/migrations/2019-07-10-172236_rename_task_to_job/: down.sql  up.sql
src/server/migrations/2019-07-10-213221_rename_pipeline_to_task/: down.sql  up.sql
src/server/migrations/2019-07-11-050342_create_job_variables_table/: down.sql  up.sql
src/server/migrations/2019-07-12-170746_create_global_variables_table/: down.sql  up.sql
src/server/migrations/2019-07-14-092322_create_variable_advertisements_table/: down.sql  up.sql
src/server/migrations/2019-07-21-160055_create_sessions_table/: up.sql
src/server/migrations/2019-07-22-212737_add_labels_to_tasks_table/: down.sql  up.sql
src/server/migrations/2019-07-23-073237_add_privileges_to_sessions_table/: down.sql  up.sql
src/server/migrations/2019-07-23-130102_add_token_uniqueness_constraint_to_sessions_table/: down.sql  up.sql
src/server/migrations/2019-07-26-160622_create_fuzzystrmatch_extension/: down.sql
src/server/migrations/2019-09-02-122542_add_key_uniqueness_constraint_to_job_variables_table/: down.sql  up.sql
src/server/migrations/2019-09-03-135727_add_name_task_id_uniqueness_constraint_to_steps_table/: down.sql  up.sql
src/server/migrations/2019-09-03-142055_add_key_task_id_uniqueness_constraint_to_variables_table/: down.sql  up.sql
src/server/migrations/2019-09-03-154728_alter_position_task_id_uniqueness_constraint_for_steps_table/: down.sql  up.sql
src/server/migrations/2019-09-03-161047_alter_key_step_id_uniqueness_constraint_for_variable_advertisements_table/: down.sql  up.sql
src/server/src/: graphql.rs  handlers.rs  main.rs  middleware.rs  models.rs  processor.rs  resources.rs  schema.rs  server.rs  worker.rs
src/server/src/models/: global_variable.rs  session.rs  variable_advertisement.rs
src/server/src/resources/: global_variable.rs  job.rs  pipeline.rs  session.rs  step.rs  task.rs  variable.rs
src/server/src/resources/job/: step.rs  variable.rs
src/server/src/resources/task/: step.rs
src/web-client/: .gitignore  Cargo.toml  Makefile.toml  README.md  schema.graphql  style.scss
src/web-client/queries/: create_job.graphql  create_task_from_pipeline.graphql  fetch_job_result.graphql  fetch_pipeline_details.graphql  fetch_pipelines.graphql  fetch_session_details.graphql  fetch_statistics.graphql  fetch_task_details.graphql  search_tasks.graphql  task_statuses.graphql
src/web-client/scss/: base.scss  placeholders.scss
src/web-client/src/: app.rs  controller.rs  graphql.rs  lib.rs  resources.rs  router.rs  utils.rs  views.rs
src/web-client/src/component/: header.rs  header.scss  job_result.rs  job_result.scss  login.rs  login.scss  mod.rs  navbar.rs  navbar.scss  statistic.rs  statistic.scss  task_details.rs  task_details.scss  task_menu.rs  task_result.rs  task_result.scss  tasks.rs  tasks.scss  variable.rs  variable.scss
src/web-client/src/model/: job.rs  mod.rs  session.rs  statistics.rs  task.rs  tasks.rs  variable.rs
src/web-client/src/resources/: pipeline.rs  task.rs
src/web-client/src/service/: cookie.rs  graphql.rs  mod.rs  shortcut.rs
src/web-client/src/views/: pipeline_details.rs  pipelines.rs  search_bar.rs  statistics.rs  variable.rs
src/web-client/static/: index.html  site.webmanifest
src/web-client/static/css/: fa.css
