[workspace]
members = [
  "src/core",
  "src/processors/git-clone",
  "src/processors/http-request",
  "src/processors/json-edit",
  "src/processors/print-output",
  "src/processors/redis-command",
  "src/processors/shell-command",
  "src/processors/sql-query",
  "src/processors/string-regex",
  "src/server",
]
exclude = ["src/web-client"]

[patch.crates-io]
# waiting for: http://git.io/fjwsN
json-query = { git = "https://github.com/JeanMertz/json-query", branch = "newline" }
# waiting for: http://git.io/fjwls
jq-src = { git = "https://github.com/onelson/jq-src", branch = "master" }
