[workspace]
members = [
  "src/core",
  "src/processors/git-clone",
  "src/processors/http-request",
  "src/processors/json-edit",
  "src/processors/print-output",
  "src/processors/redis-command",
  "src/processors/shell-command",
  "src/processors/sql-query",
  "src/processors/string-regex",
  "src/server",
]
exclude = ["src/web-client"]
