[package]
name = "automaat-core"
version = "0.1.0"
authors = ["Jean Mertz <jean@mertz.fm>"]
license = "MIT/Apache-2.0"
description = "Automation task scheduler"
repository = "https://github.com/blendle/automaat"
keywords = ["automaat", "automation"]
categories = ["command-line-utilities"]
readme = "README.md"
include = [
  "Cargo.toml",
  "src/**/*.rs",
  "README.md",
  "LICENSE-APACHE",
  "LICENSE-MIT"
]
edition = "2018"

[badges]
travis-ci = { repository = "blendle/automaat" }

[dependencies]
serde = "1"
tempfile = "3"

[dev-dependencies]
version-sync = "0.8"
serde = { version = "1", features = ["derive"] }
