[package]
name = "automaat-server"
version = "0.1.0"
authors = ["Jean Mertz <jean@mertz.fm>"]
license = "MIT/Apache-2.0"
description = "HTTP API for the Automaat automation utility."
repository = "https://github.com/blendle/automaat"
keywords = ["automaat", "automation"]
categories = ["command-line-utilities"]
readme = "README.md"
include = [
  "Cargo.toml",
  "src/**/*.rs",
  "migrations/**/*.sql",
  "README.md",
  "LICENSE-APACHE",
  "LICENSE-MIT"
]
edition = "2018"

[badges]
travis-ci = { repository = "blendle/automaat" }

[dependencies]
actix-files = "0.1.2"
actix-web = { version = "1.0.2", default-features = false, features = [
  "brotli",
  "flate2-zlib",
  "ssl"
] }
automaat-core = { version = "0.1", path = "../core" }
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4", default-features = false, features = [
  "postgres",
  "r2d2",
  "chrono",
  "serde_json"
] }
diesel-derive-enum = { version = "0.4", features = ["postgres"] }
diesel_migrations = "1.4"
futures = "0.1"
juniper = { version = "0.12", features = ["chrono"] }
juniper_serde = "0.1"
openssl = "0.10"
paste = "0.1"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
actix-service = "0.4.1"

[dependencies.processor-git-clone-v1]
package = "automaat-processor-git-clone"
version = "0.1"
path = "../processors/git-clone"
features = ["juniper"]

[dependencies.processor-json-edit-v1]
package = "automaat-processor-json-edit"
version = "0.1"
path = "../processors/json-edit"
features = ["juniper"]

[dependencies.processor-print-output-v1]
package = "automaat-processor-print-output"
version = "0.1"
path = "../processors/print-output"
features = ["juniper"]

[dependencies.processor-redis-command-v1]
package = "automaat-processor-redis-command"
version = "0.1"
path = "../processors/redis-command"
features = ["juniper"]

[dependencies.processor-shell-command-v1]
package = "automaat-processor-shell-command"
version = "0.1"
path = "../processors/shell-command"
features = ["juniper"]

[dependencies.processor-string-regex-v1]
package = "automaat-processor-string-regex"
version = "0.1"
path = "../processors/string-regex"
features = ["juniper"]

[dependencies.processor-sql-query-v1]
package = "automaat-processor-sql-query"
version = "0.1"
path = "../processors/sql-query"
features = ["juniper"]

[dev-dependencies]
version-sync = "0.8"
