[package]
name = "automaat-web-client"
version = "0.1.0"
authors = ["Jean Mertz <jean@mertz.fm>"]
license = "MIT/Apache-2.0"
description = "Web Client for the Automaat automation utility."
repository = "https://github.com/blendle/automaat"
keywords = ["automaat", "automation"]
categories = ["command-line-utilities"]
readme = "README.md"
edition = "2018"
include = [
  "/Cargo.toml",
  "/LICENSE-APACHE",
  "/LICENSE-MIT",
  "/README.md",
  "/queries/**/*.graphql",
  "/schema.graphql",
  "/src/**/*.rs",
  "/static/**/*",
]

[badges]
travis-ci = { repository = "blendle/automaat" }

[lib]
name = "automaat"
crate-type = ["cdylib"]

[features]
default = ["console"]
console = ["console_log", "console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "0.1", optional = true }
console_log = { version = "0.1", optional = true }
dodrio = "0.1"
futures = { version = "0.1", default-features = false }
gloo-events = { git = "https://github.com/rustwasm/gloo.git", rev = "1078ca3166b16ea8e19d9d691935e1f0fc23f87a" }
graphql_client = { version = "0.8", default-features = false, features = [
  "web"
] }
js-sys = "0.3"
log = { version = "0.4", features = ["release_max_level_off"] }
serde = { version = "1", default-features = false }
wasm-bindgen = { version = "0.2", default-features = false, features = [
  "std",
  "serde-serialize"
] }
wasm-bindgen-futures = "0.3"
wasm-timer = "0.1"
wee_alloc = { version = "0.4", default-features = false }
pulldown-cmark = { version = "0.5", default-features = false }

[dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "Event",
  "EventTarget",
  "ProgressEvent",
  "KeyboardEvent",
  "FormData",
  "HtmlFormElement",
  "HtmlBodyElement",
  "HashChangeEvent",
  "HtmlElement",
  "HtmlInputElement",
  "MutationObserver",
  "MutationRecord",
  "NodeList",
  "MutationObserverInit",
  "Location",
  "Window",
]

[patch.crates-io]
dodrio = { git = "https://github.com/fitzgen/dodrio.git", rev = "40e5adbdacc30a88cac33052ab40c92cee236ab2" }

[profile.release]
# Disable parallel code generation for optimal optimisations.
#
# https://doc.rust-lang.org/cargo/reference/manifest.html
codegen-units = 1
# Keep debug symbols for wasm-snip optimisations, will eventually be stripped by wasm-opt.
#
# https://docs.rs/wasm-snip
debug = true
# Reduce filesize using LLVM's Link Time Optimization.
#
# https://llvm.org/docs/LinkTimeOptimization.html
lto = true
# Enable most aggressive code size optimizations.
#
# https://rustwasm.github.io/book/reference/code-size.html
opt-level = "z"
# Remove default panic infrastructure to reduce binart size.
#
# https://doc.rust-lang.org/edition-guide/rust-2018/error-handling-and-panics/aborting-on-panic.html
panic = "abort"
