[package]
name = "automaat-processor-git-clone"
version = "0.1.0"
authors = ["Jean Mertz <jean@mertz.fm>"]
license = "MIT/Apache-2.0"
description = "Git Clone processor for the Automaat automation utility."
repository = "https://github.com/blendle/automaat"
keywords = ["automaat", "automation"]
categories = ["command-line-utilities"]
readme = "README.md"
include = [
  "Cargo.toml",
  "src/**/*.rs",
  "README.md",
  "LICENSE-APACHE",
  "LICENSE-MIT"
]
edition = "2018"

[badges]
travis-ci = { repository = "blendle/automaat" }

[dependencies]
git2 = "0.8"
juniper = { version = "0.13", optional = true }
serde = { version = "1", features = ["derive"] }
url = "1"

# When upgrading this dependency, be sure to upgrade any links in the
# documentation of this crate by searching for `automaat-core/<old-version>`
[dependencies.automaat-core]
version = "0.1"
path = "../../core"

[dev-dependencies]
juniper = "0.13"
version-sync = "0.8"
