[package]
name = "automaat-processor-json-edit"
version = "0.1.0"
authors = ["Jean Mertz <jean@mertz.fm>"]
license = "MIT/Apache-2.0"
description = "JSON Editor processor for the Automaat automation utility."
repository = "https://github.com/blendle/automaat"
keywords = ["automaat", "automation"]
categories = ["command-line-utilities"]
readme = "README.md"
include = [
  "Cargo.toml",
  "src/**/*.rs",
  "README.md",
  "LICENSE-APACHE",
  "LICENSE-MIT"
]
edition = "2018"

[badges]
travis-ci = { repository = "blendle/automaat" }

[dependencies]
automaat-core = { version = "0.1", path = "../../core" }
jq-rs = { version = "0.4", features = ["bundled"] }
juniper = { version = "0.13", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
juniper = "0.13"
version-sync = "0.8"
